--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node production/server.js",
         "server": "nodemon server.ts",
-        "buildserver": "tsc && nodemon production/server.js",
+        "buildserver": "tsc",
         "generate": "ts-node ./data/generator.ts"
     },
     "keywords": [],
