--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "nodemailer": "^6.7.2",
         "passport": "^0.5.2",
         "passport-google-oauth20": "^2.0.0",
-        "source-map-support": "^0.5.21"
+        "source-map-support": "^0.5.21",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/ejs": "^3.1.0",
@@ -37,6 +38,7 @@
         "@types/nodemailer": "^6.4.4",
         "@types/passport": "^1.0.7",
         "@types/passport-google-oauth20": "^2.0.11",
+        "@types/uuid": "^8.3.4",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
