--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node production/server.js",
         "server": "nodemon server.ts",
         "buildserver": "tsc",
-        "generate": "ts-node ./data/generator.ts"
+        "generate": "ts-node ./data/generator.ts",
+        "prod:start": "pm2-runtime production/server.js"
     },
     "keywords": [],
     "author": "",
