--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "start": "node production/server.js",
         "server": "nodemon server.ts",
         "buildserver": "tsc",
-        "generate": "ts-node ./data/generator.ts",
-        "prod:start": "pm2-runtime production/server.js"
+        "generate": "ts-node ./data/generator.ts"
     },
     "keywords": [],
     "author": "",
