--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "googleapis": "^92.0.0",
         "jsonwebtoken": "^8.5.1",
         "moment-timezone": "^0.5.34",
+        "mongodb": "^6.8.0",
         "mongoose": "^6.1.3",
         "nodemailer": "^6.7.2",
         "passport": "^0.5.2",
