--- a/builds/player-build/manifest.json
+++ b/builds/player-build/manifest.json
@@ -18,8 +18,13 @@
             "sizes": "192x192"
         },
         {
-            "src": "latest-blueblack.png",
+            "src": "512x512.png",
             "type": "image/png",
+            "sizes": "512x512"
+        },
+        {
+            "src": "512x512.svg",
+            "type": "image/svg",
             "sizes": "512x512"
         }
     ],
