--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@types/express": "^4.17.13",
         "@types/geoip-lite": "^1.4.1",
         "@types/jsonwebtoken": "^8.5.6",
+        "@types/lodash": "^4.17.14",
         "@types/moment-timezone": "^0.5.30",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^17.0.2",
@@ -41,7 +42,7 @@
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/uuid": "^8.3.4",
         "nodemon": "^2.0.15",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.4"
+        "ts-node": "^10.9.2",
+        "typescript": "^4.9.5"
     }
 }
